--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body class="">
 
     <!-- navber section start -->
-    <nav class="navbar bg-base-100 mb-5 lg:mb-16 p-0 lg:my-12 lg:mx-28 my-5 mx-5">
+    <nav class="navbar bg-base-100 mb-5 lg:mb-16 p-0 lg:my-12 lg:px-28 my-5 px-5">
 
         <div class="navbar-start">
 
@@ -109,8 +109,7 @@
 
         <div class="lg:absolute bottom-14 right-10 banner-content bg-black text-white p-8 lg:w-1/2">
             <h1 class="text-2xl font-extrabold mb-4">Meet all the heroes from the field</h1>
-            <p class="text-base font-medium text-textcolor">Dit amet consectetur. Condimentum dignissim adipiscing
-                aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            <p class="text-base font-medium text-textcolor">Feel free to provide more specific details or let me know if there's a particular aspect you'd like to focus on</p>
         </div>
 
     </header>
@@ -124,8 +123,7 @@
         <!-- professional-sec start -->
         <div class="professional-content text-center">
             <h1 class="text-4xl font-extrabold">Professional Hockeys Club</h1>
-            <p class="text-base font-medium mt-5 text-gray-600">Dit amet consectetur. Condimentum dignissim adipiscing
-                aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+            <p class="text-base font-medium mt-5 text-gray-600">If you're referring to main of a professional hockey club, there are several <br>aspects to consider. Here are some points </p>
         </div>
 
         <hr class="border-t-2 border-dashed mt-10 mb-10 lg:mb-16">
@@ -135,29 +133,25 @@
             <div class="card flex flex-col justify-center items-center">
                 <div class="radial-progress text-btncolor" style="--value:87;" role="progressbar">87%</div>
                 <h1 class="text-xl font-semibold my-4">Prayer Facility</h1>
-                <p class="text-base text-center text-gray-600">Ame consectetur.Condimentum <br> dignissim adipiscing .
-                </p>
+                <p class="text-base text-center text-gray-600">aspects often associated with <br> prayer facilities.</p>
             </div>
 
             <div class="card flex flex-col justify-center items-center">
                 <div class="radial-progress text-green-400" style="--value:95;" role="progressbar">95%</div>
                 <h1 class="text-xl font-semibold my-4">Experienced Coach</h1>
-                <p class="text-base text-center text-gray-600">Ame consectetur.Condimentum <br> dignissim adipiscing .
-                </p>
+                <p class="text-base text-center text-gray-600">aspects often associated with <br> prayer facilities.</p>
             </div>
 
             <div class="card flex flex-col justify-center items-center">
                 <div class="radial-progress text-yellow-500" style="--value:90;" role="progressbar">90%</div>
                 <h1 class="text-xl font-semibold my-4">Senior Player</h1>
-                <p class="text-base text-center text-gray-600">Ame consectetur.Condimentum <br> dignissim adipiscing .
-                </p>
+                <p class="text-base text-center text-gray-600">aspects often associated with <br> prayer facilities.</p>
             </div>
 
             <div class="card flex flex-col justify-center items-center">
                 <div class="radial-progress text-blue-400" style="--value:80;" role="progressbar">80%</div>
                 <h1 class="text-xl font-semibold my-4">Training Ground</h1>
-                <p class="text-base text-center text-gray-600">Ame consectetur.Condimentum <br> dignissim adipiscing .
-                </p>
+                <p class="text-base text-center text-gray-600"> aspects often associated with <br> prayer facilities.</p>
             </div>
 
         </div>
@@ -168,8 +162,7 @@
         <!-- program-sec start-->
         <div class="program-content text-center">
             <h1 class="text-4xl font-extrabold mb-6">Program Sections</h1>
-            <p class="text-base font-medium text-gray-600">Dit amet consectetur. Condimentum dignissim adipiscing
-                aliquam turpis placerat <br>dolor. Purus urna in sit nullam proin. </p>
+            <p class="text-base font-medium text-gray-600">What type of hockey equipment are you offering? This could include <br> sticks, skates, protective gear, etc.</p>
         </div>
 
         <hr class="border-t-2 border-dashed mb-12 mt-10 ">
@@ -180,10 +173,7 @@
                     <div class="picture1 bg-cover h-full">
                         <div class="junior-content px-10 py-10 text-white">
                             <h1 class="text-3xl font-extrabold mb-6">Junior Program</h1>
-                            <p class="text-base font-medium mb-10">Dolor sit amet consectetur.Ut urna diam quis
-                                sagittis.Elit elit
-                                enim sagittis turpis in magna.Id et sed euismod natoque amet nunc morbi nulla.Tortor
-                                congue sed et in.</p>
+                            <p class="text-base font-medium mb-10">Are there any technological advancements or unique features in your hockey equipment that set them apart from others in the market</p>
                             <button class="btn bg-btncolor text-white border-none">Register Now!</button>
                         </div>
                     </div>
@@ -192,10 +182,7 @@
                     <div class="picture2 bg-cover h-full">
                         <div class="junior-content px-10 py-10 text-white">
                             <h1 class="text-3xl font-extrabold mb-6">Junior Program</h1>
-                            <p class="text-base font-medium mb-10">Dolor sit amet consectetur. Ut urna diam quis
-                                sagittis. Elit elit
-                                enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor
-                                congue sed et in.</p>
+                            <p class="text-base font-medium mb-10">Are there any technological advancements or unique features in your hockey equipment that set them apart from others in the market</p>
                             <button class="btn bg-btncolor text-white border-none">Register Now!</button>
                         </div>
                     </div>
@@ -206,11 +193,7 @@
                     <div class="picture3 bg-cover w-full h-full">
                         <div class="junior-content px-10 pt-10 lg:pt-48 pb-10 text-white">
                             <h1 class="text-3xl font-extrabold mb-6">Junior Program</h1>
-                            <p class="text-base font-medium mb-10 lg:w-[450px]">Dolor sit amet consectetur. Ut urna diam
-                                quis
-                                sagittis. Elit elit
-                                enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor
-                                congue sed et in.</p>
+                            <p class="text-base font-medium mb-10 lg:w-[450px]">Are there any technological advancements or unique features in your hockey equipment that set them apart from others in the market</p>
                             <button class="btn bg-btncolor text-white border-none">Register Now!</button>
                         </div>
                     </div>
@@ -224,9 +207,7 @@
         <!-- new-product sec start -->
         <div class="new-product-content text-center">
             <h1 class="text-4xl font-extrabold mb-6">Our New Products</h1>
-            <p class="text-base font-medium text-gray-600">Dit amet consectetur. Condimentum dignissim adipiscing
-                aliquam turpis
-                placerat <br> dolor. Purus urna in sit nullam proin. </p>
+            <p class="text-base font-medium text-gray-600">To provide accurate and up-to-date details about your new products, <br> please share more information </p>
         </div>
 
         <hr class="border-t-2 border-dashed mb-10 mt-10">
@@ -255,9 +236,7 @@
                             </div>
                         </div>
                         <h1 class="text-xl font-extrabold my-1">World Cup Flags Football</h1>
-                        <p class="text-base font-medium text-gray-600 mb-1">Dolor sit amet consectetur. Ut urna diam
-                            quis sagittis.
-                        </p>
+                        <p class="text-base font-medium text-gray-600 mb-1">Utility classes help you work within the constraintsclasses help</p>
                         <div class="cart flex lg:flex-row flex-col gap-2">
                             <h1 class="font-extrabold text-lg text-btncolor">Price - $22.00</h1>
                             <div class="shop flex">
@@ -291,9 +270,7 @@
                             </div>
                         </div>
                         <h1 class="text-xl font-extrabold my-1">World Cup Flags Football</h1>
-                        <p class="text-base font-medium text-gray-600 mb-1">Dolor sit amet consectetur. Ut urna diam
-                            quis sagittis.
-                        </p>
+                        <p class="text-base font-medium text-gray-600 mb-1">Utility classes help you work within the constraintsclasses help</p>
                         <div class="cart flex lg:flex-row flex-col gap-2">
                             <h1 class="font-extrabold text-lg text-btncolor">Price - $22.00</h1>
                             <div class="shop flex">
@@ -330,9 +307,7 @@
                             </div>
                         </div>
                         <h1 class="text-xl font-extrabold my-1">World Cup Flags Football</h1>
-                        <p class="text-base font-medium text-gray-600 mb-1">Dolor sit amet consectetur. Ut urna diam
-                            quis sagittis.
-                        </p>
+                        <p class="text-base font-medium text-gray-600 mb-1">Utility classes help you work within the constraintsclasses help</p>
                         <div class="cart flex lg:flex-row flex-col gap-2">
                             <h1 class="font-extrabold text-lg text-btncolor">Price - $22.00</h1>
                             <div class="shop flex">
@@ -366,9 +341,7 @@
                             </div>
                         </div>
                         <h1 class="text-xl font-extrabold my-1">World Cup Flags Football</h1>
-                        <p class="text-base font-medium text-gray-600 mb-1">Dolor sit amet consectetur. Ut urna diam
-                            quis sagittis.
-                        </p>
+                        <p class="text-base font-medium text-gray-600 mb-1">Utility classes help you work within the constraintsclasses help</p>
                         <div class="cart flex lg:flex-row flex-col gap-2">
                             <h1 class="font-extrabold text-lg text-btncolor">Price - $22.00</h1>
                             <div class="shop flex">
@@ -405,9 +378,7 @@
                             </div>
                         </div>
                         <h1 class="text-xl font-extrabold my-1">World Cup Flags Football</h1>
-                        <p class="text-base font-medium text-gray-600 mb-1">Dolor sit amet consectetur. Ut urna diam
-                            quis sagittis.
-                        </p>
+                        <p class="text-base font-medium text-gray-600 mb-1">Utility classes help you work within the constraintsclasses help </p>
                         <div class="cart flex lg:flex-row flex-col gap-2">
                             <h1 class="font-extrabold text-lg text-btncolor">Price - $22.00</h1>
                             <div class="shop flex">
@@ -441,9 +412,7 @@
                             </div>
                         </div>
                         <h1 class="text-xl font-extrabold my-1">World Cup Flags Football</h1>
-                        <p class="text-base font-medium text-gray-600 mb-1">Dolor sit amet consectetur. Ut urna diam
-                            quis sagittis.
-                        </p>
+                        <p class="text-base font-medium text-gray-600 mb-1">Utility classes help you work within the constraintsclasses help</p>
                         <div class="cart flex lg:flex-row flex-col gap-2">
                             <h1 class="font-extrabold text-lg text-btncolor">Price - $22.00</h1>
                             <div class="shop flex">
@@ -466,15 +435,13 @@
         <!-- clients-question start-->
         <div class="client-content text-center">
             <h1 class="text-4xl font-extrabold mb-6">Clients Question</h1>
-            <p class="text-base font-medium text-gray-600">Dit amet consectetur. Condimentum dignissim adipiscing
-                aliquam turpis
-                placerat <br> dolor. Purus urna in sit nullam proin. </p>
+            <p class="text-base font-medium text-gray-600">If you can suppress the urge to retch long enough to give it a chance, <br> I really think happy love me </p>
         </div>
 
         <hr class="border-t-2 border-dashed mb-10 mt-10">
 
         <div
-            class="accordien-container items-center justify-center flex flex-col lg:flex-row gap-5 lg:gap-10 border p-5 border-gray-300">
+            class="accordien-container items-center justify-center flex flex-col lg:flex-row gap-5 lg:gap-10 border p-5 rounded-2xl border-gray-300">
 
             <div class="pic-sec">
                 <img src="Images/11.png" alt="">
@@ -488,9 +455,7 @@
                         Our Equipment
                     </div>
                     <div class="collapse-content">
-                        <p class="text-base text-gray-600">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                            elit enim sagittis turpis in
-                            magna.</p>
+                        <p class="text-base text-gray-600">With Chrome profiles you can separate all your Chrome stuff. Create profiles for friends and family</p>
                     </div>
 
                     <hr class="border">
@@ -503,9 +468,7 @@
                         Hockey Training
                     </div>
                     <div class="collapse-content">
-                        <p class="text-base text-gray-600">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                            elit enim sagittis turpis in
-                            magna.</p>
+                        <p class="text-base text-gray-600">With Chrome profiles you can separate all your Chrome stuff. Create profiles for friends and family</p>
                     </div>
 
                     <hr class="border">
@@ -517,9 +480,7 @@
                         Private Lessons
                     </div>
                     <div class="collapse-content">
-                        <p class="text-base text-gray-600">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                            elit enim sagittis turpis in
-                            magna.</p>
+                        <p class="text-base text-gray-600">With Chrome profiles you can separate all your Chrome stuff. Create profiles for friends and family</p>
                     </div>
 
                     <hr class="border">
@@ -531,9 +492,7 @@
                         Ski Touring
                     </div>
                     <div class="collapse-content">
-                        <p class="text-base text-gray-600">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                            elit enim sagittis turpis in
-                            magna.</p>
+                        <p class="text-base text-gray-600">With Chrome profiles you can separate all your Chrome stuff. Create profiles for friends and family</p>
                     </div>
 
                     <hr class="border">
@@ -545,9 +504,7 @@
                         Booking
                     </div>
                     <div class="collapse-content">
-                        <p class="text-base text-gray-600">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                            elit enim sagittis turpis in
-                            magna.</p>
+                        <p class="text-base text-gray-600">With Chrome profiles you can separate all your Chrome stuff. Create profiles for friends and family</p>
                     </div>
 
                     <hr class="border">
@@ -559,9 +516,7 @@
                         Pricings
                     </div>
                     <div class="collapse-content">
-                        <p class="text-base text-gray-600">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                            elit enim sagittis turpis in
-                            magna.</p>
+                        <p class="text-base text-gray-600">With Chrome profiles you can separate all your Chrome stuff. Create profiles for friends and family</p>
                     </div>
                 </div>
 
@@ -576,16 +531,14 @@
         <!-- Get In Touch section start -->
         <div class="client-content text-center">
             <h1 class="text-4xl font-extrabold mb-6">Clients Get In Touch</h1>
-            <p class="text-base font-medium text-gray-600">Dit amet consectetur. Condimentum dignissim adipiscing
-                aliquam turpis
-                placerat <br> dolor. Purus urna in sit nullam proin. </p>
+            <p class="text-base font-medium text-gray-600">Win the hearts of all buyers and get a lot of more new works form them. <br> Thanks.Win the hearts of all buyers </p>
         </div>
 
         <hr class="border-t-2 border-dashed mb-16 mt-10">
 
 
         <div class="unique-container justify-center flex lg:flex-row flex-col gap-12">
-            <div class="contact p-5 border items-center flex flex-col gap-6 border-gray-200">
+            <div class="contact rounded-2xl p-5 border items-center flex flex-col gap-6 border-gray-200">
 
                 <div class="phone bg-phncolor px-8 py-10 rounded-2xl w-full lg:w-80 lg:h-48">
                     <img src="Images/Group 1171275317.png" alt="">
@@ -647,7 +600,7 @@
     </main>
     <!-- main section end -->
 
-    <div class="social-media mt-12 mb-24 text-center p-10 bg-gray-100 lg:my-12 lg:mx-28 my-5 mx-5">
+    <div class="social-media rounded-2xl mt-12 mb-24 text-center p-10 bg-gray-100 lg:my-12 lg:mx-28 my-5 mx-5">
         <h1 class="text-2xl font-extrabold mb-6">Social Media</h1>
         <i class="fa-brands fa-twitter"></i>
         <i class="fa-brands fa-facebook ml-3"></i>
@@ -661,8 +614,8 @@
         <div class="foot-left text-center lg:text-left">
             <div class="footer-content">
                 <h1 class="text-2xl font-bold mb-3 ">Get In Touch</h1>
-                <p class="text-base font-medium gray">Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat
-                    <br>dolor. Purus urna in sit nullam proin.
+                <p class="text-base font-medium gray">maybe we can still help you find Looked Everywhere
+                    For <br> This Page what you're looking for
                 </p>
             </div>
             <div class="lg:ml-0 ml-12">
