--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 
         <div class="lg:absolute bottom-14 right-10 banner-content bg-black text-white p-8 lg:w-1/2">
             <h1 class="text-2xl font-extrabold mb-4">Meet all the heroes from the field</h1>
-            <p class="text-base font-medium text-textcolor">Feel free to provide more specific details or let me know if there's a particular aspect you'd like to focus on</p>
+            <p class="text-base font-medium text-textcolor">Feel free to provide more specific details or let me know if
+                there's a particular aspect you'd like to focus on</p>
         </div>
 
     </header>
@@ -123,7 +124,8 @@
         <!-- professional-sec start -->
         <div class="professional-content text-center">
             <h1 class="text-4xl font-extrabold">Professional Hockeys Club</h1>
-            <p class="text-base font-medium mt-5 text-gray-600">If you're referring to main of a professional hockey club, there are several <br>aspects to consider. Here are some points </p>
+            <p class="text-base font-medium mt-5 text-gray-600">If you're referring to main of a professional hockey
+                club, there are several <br>aspects to consider. Here are some points </p>
         </div>
 
         <hr class="border-t-2 border-dashed mt-10 mb-10 lg:mb-16">
@@ -151,7 +153,8 @@
             <div class="card flex flex-col justify-center items-center">
                 <div class="radial-progress text-blue-400" style="--value:80;" role="progressbar">80%</div>
                 <h1 class="text-xl font-semibold my-4">Training Ground</h1>
-                <p class="text-base text-center text-gray-600"> aspects often associated with <br> prayer facilities.</p>
+                <p class="text-base text-center text-gray-600"> aspects often associated with <br> prayer facilities.
+                </p>
             </div>
 
         </div>
@@ -162,7 +165,8 @@
         <!-- program-sec start-->
         <div class="program-content text-center">
             <h1 class="text-4xl font-extrabold mb-6">Program Sections</h1>
-            <p class="text-base font-medium text-gray-600">What type of hockey equipment are you offering? This could include <br> sticks, skates, protective gear, etc.</p>
+            <p class="text-base font-medium text-gray-600">What type of hockey equipment are you offering? This could
+                include <br> sticks, skates, protective gear, etc.</p>
         </div>
 
         <hr class="border-t-2 border-dashed mb-12 mt-10 ">
@@ -170,19 +174,21 @@
         <div class="program-pic-sec ">
             <div class="program2 flex lg:flex-row flex-col justify-center gap-6 mb-6">
                 <div class="junior-program ">
-                    <div class="picture1 bg-cover h-full">
+                    <div class="picture1 rounded-2xl bg-cover h-full">
                         <div class="junior-content px-10 py-10 text-white">
                             <h1 class="text-3xl font-extrabold mb-6">Junior Program</h1>
-                            <p class="text-base font-medium mb-10">Are there any technological advancements or unique features in your hockey equipment that set them apart from others in the market</p>
+                            <p class="text-base font-medium mb-10">Are there any technological advancements or unique
+                                features in your hockey equipment that set them apart from others in the market</p>
                             <button class="btn bg-btncolor text-white border-none">Register Now!</button>
                         </div>
                     </div>
                 </div>
                 <div class="junior-program ">
-                    <div class="picture2 bg-cover h-full">
+                    <div class="picture2 rounded-2xl bg-cover h-full">
                         <div class="junior-content px-10 py-10 text-white">
                             <h1 class="text-3xl font-extrabold mb-6">Junior Program</h1>
-                            <p class="text-base font-medium mb-10">Are there any technological advancements or unique features in your hockey equipment that set them apart from others in the market</p>
+                            <p class="text-base font-medium mb-10">Are there any technological advancements or unique
+                                features in your hockey equipment that set them apart from others in the market</p>
                             <button class="btn bg-btncolor text-white border-none">Register Now!</button>
                         </div>
                     </div>
@@ -190,10 +196,12 @@
             </div>
             <div class="program-1">
                 <div class="junior-program ">
-                    <div class="picture3 bg-cover w-full h-full">
+                    <div class="picture3 rounded-2xl bg-cover w-full h-full">
                         <div class="junior-content px-10 pt-10 lg:pt-48 pb-10 text-white">
                             <h1 class="text-3xl font-extrabold mb-6">Junior Program</h1>
-                            <p class="text-base font-medium mb-10 lg:w-[450px]">Are there any technological advancements or unique features in your hockey equipment that set them apart from others in the market</p>
+                            <p class="text-base font-medium mb-10 lg:w-[450px]">Are there any technological advancements
+                                or unique features in your hockey equipment that set them apart from others in the
+                                market</p>
                             <button class="btn bg-btncolor text-white border-none">Register Now!</button>
                         </div>
                     </div>
@@ -207,7 +215,8 @@
         <!-- new-product sec start -->
         <div class="new-product-content text-center">
             <h1 class="text-4xl font-extrabold mb-6">Our New Products</h1>
-            <p class="text-base font-medium text-gray-600">To provide accurate and up-to-date details about your new products, <br> please share more information </p>
+            <p class="text-base font-medium text-gray-600">To provide accurate and up-to-date details about your new
+                products, <br> please share more information </p>
         </div>
 
         <hr class="border-t-2 border-dashed mb-10 mt-10">
@@ -236,7 +245,8 @@
                             </div>
                         </div>
                         <h1 class="text-xl font-extrabold my-1">World Cup Flags Football</h1>
-                        <p class="text-base font-medium text-gray-600 mb-1">Utility classes help you work within the constraintsclasses help</p>
+                        <p class="text-base font-medium text-gray-600 mb-1">Utility classes help you work within the
+                            constraintsclasses help</p>
                         <div class="cart flex lg:flex-row flex-col gap-2">
                             <h1 class="font-extrabold text-lg text-btncolor">Price - $22.00</h1>
                             <div class="shop flex">
@@ -270,7 +280,8 @@
                             </div>
                         </div>
                         <h1 class="text-xl font-extrabold my-1">World Cup Flags Football</h1>
-                        <p class="text-base font-medium text-gray-600 mb-1">Utility classes help you work within the constraintsclasses help</p>
+                        <p class="text-base font-medium text-gray-600 mb-1">Utility classes help you work within the
+                            constraintsclasses help</p>
                         <div class="cart flex lg:flex-row flex-col gap-2">
                             <h1 class="font-extrabold text-lg text-btncolor">Price - $22.00</h1>
                             <div class="shop flex">
@@ -307,7 +318,8 @@
                             </div>
                         </div>
                         <h1 class="text-xl font-extrabold my-1">World Cup Flags Football</h1>
-                        <p class="text-base font-medium text-gray-600 mb-1">Utility classes help you work within the constraintsclasses help</p>
+                        <p class="text-base font-medium text-gray-600 mb-1">Utility classes help you work within the
+                            constraintsclasses help</p>
                         <div class="cart flex lg:flex-row flex-col gap-2">
                             <h1 class="font-extrabold text-lg text-btncolor">Price - $22.00</h1>
                             <div class="shop flex">
@@ -341,7 +353,8 @@
                             </div>
                         </div>
                         <h1 class="text-xl font-extrabold my-1">World Cup Flags Football</h1>
-                        <p class="text-base font-medium text-gray-600 mb-1">Utility classes help you work within the constraintsclasses help</p>
+                        <p class="text-base font-medium text-gray-600 mb-1">Utility classes help you work within the
+                            constraintsclasses help</p>
                         <div class="cart flex lg:flex-row flex-col gap-2">
                             <h1 class="font-extrabold text-lg text-btncolor">Price - $22.00</h1>
                             <div class="shop flex">
@@ -378,7 +391,8 @@
                             </div>
                         </div>
                         <h1 class="text-xl font-extrabold my-1">World Cup Flags Football</h1>
-                        <p class="text-base font-medium text-gray-600 mb-1">Utility classes help you work within the constraintsclasses help </p>
+                        <p class="text-base font-medium text-gray-600 mb-1">Utility classes help you work within the
+                            constraintsclasses help </p>
                         <div class="cart flex lg:flex-row flex-col gap-2">
                             <h1 class="font-extrabold text-lg text-btncolor">Price - $22.00</h1>
                             <div class="shop flex">
@@ -412,7 +426,8 @@
                             </div>
                         </div>
                         <h1 class="text-xl font-extrabold my-1">World Cup Flags Football</h1>
-                        <p class="text-base font-medium text-gray-600 mb-1">Utility classes help you work within the constraintsclasses help</p>
+                        <p class="text-base font-medium text-gray-600 mb-1">Utility classes help you work within the
+                            constraintsclasses help</p>
                         <div class="cart flex lg:flex-row flex-col gap-2">
                             <h1 class="font-extrabold text-lg text-btncolor">Price - $22.00</h1>
                             <div class="shop flex">
@@ -435,7 +450,8 @@
         <!-- clients-question start-->
         <div class="client-content text-center">
             <h1 class="text-4xl font-extrabold mb-6">Clients Question</h1>
-            <p class="text-base font-medium text-gray-600">If you can suppress the urge to retch long enough to give it a chance, <br> I really think happy love me </p>
+            <p class="text-base font-medium text-gray-600">If you can suppress the urge to retch long enough to give it
+                a chance, <br> I really think happy love me </p>
         </div>
 
         <hr class="border-t-2 border-dashed mb-10 mt-10">
@@ -455,7 +471,8 @@
                         Our Equipment
                     </div>
                     <div class="collapse-content">
-                        <p class="text-base text-gray-600">With Chrome profiles you can separate all your Chrome stuff. Create profiles for friends and family</p>
+                        <p class="text-base text-gray-600">With Chrome profiles you can separate all your Chrome stuff.
+                            Create profiles for friends and family</p>
                     </div>
 
                     <hr class="border">
@@ -468,7 +485,8 @@
                         Hockey Training
                     </div>
                     <div class="collapse-content">
-                        <p class="text-base text-gray-600">With Chrome profiles you can separate all your Chrome stuff. Create profiles for friends and family</p>
+                        <p class="text-base text-gray-600">With Chrome profiles you can separate all your Chrome stuff.
+                            Create profiles for friends and family</p>
                     </div>
 
                     <hr class="border">
@@ -480,7 +498,8 @@
                         Private Lessons
                     </div>
                     <div class="collapse-content">
-                        <p class="text-base text-gray-600">With Chrome profiles you can separate all your Chrome stuff. Create profiles for friends and family</p>
+                        <p class="text-base text-gray-600">With Chrome profiles you can separate all your Chrome stuff.
+                            Create profiles for friends and family</p>
                     </div>
 
                     <hr class="border">
@@ -492,7 +511,8 @@
                         Ski Touring
                     </div>
                     <div class="collapse-content">
-                        <p class="text-base text-gray-600">With Chrome profiles you can separate all your Chrome stuff. Create profiles for friends and family</p>
+                        <p class="text-base text-gray-600">With Chrome profiles you can separate all your Chrome stuff.
+                            Create profiles for friends and family</p>
                     </div>
 
                     <hr class="border">
@@ -504,7 +524,8 @@
                         Booking
                     </div>
                     <div class="collapse-content">
-                        <p class="text-base text-gray-600">With Chrome profiles you can separate all your Chrome stuff. Create profiles for friends and family</p>
+                        <p class="text-base text-gray-600">With Chrome profiles you can separate all your Chrome stuff.
+                            Create profiles for friends and family</p>
                     </div>
 
                     <hr class="border">
@@ -516,7 +537,8 @@
                         Pricings
                     </div>
                     <div class="collapse-content">
-                        <p class="text-base text-gray-600">With Chrome profiles you can separate all your Chrome stuff. Create profiles for friends and family</p>
+                        <p class="text-base text-gray-600">With Chrome profiles you can separate all your Chrome stuff.
+                            Create profiles for friends and family</p>
                     </div>
                 </div>
 
@@ -531,13 +553,14 @@
         <!-- Get In Touch section start -->
         <div class="client-content text-center">
             <h1 class="text-4xl font-extrabold mb-6">Clients Get In Touch</h1>
-            <p class="text-base font-medium text-gray-600">Win the hearts of all buyers and get a lot of more new works form them. <br> Thanks.Win the hearts of all buyers </p>
+            <p class="text-base font-medium text-gray-600">Win the hearts of all buyers and get a lot of more new works
+                form them. <br> Thanks.Win the hearts of all buyers </p>
         </div>
 
         <hr class="border-t-2 border-dashed mb-16 mt-10">
 
 
-        <div class="unique-container justify-center flex lg:flex-row flex-col gap-12">
+        <div class="unique-container justify-center flex lg:flex-row flex-col gap-5 lg:gap-12">
             <div class="contact rounded-2xl p-5 border items-center flex flex-col gap-6 border-gray-200">
 
                 <div class="phone bg-phncolor px-8 py-10 rounded-2xl w-full lg:w-80 lg:h-48">
@@ -560,7 +583,7 @@
             </div>
 
             <div class="input-sec">
-                <div class="input-1 flex flex-col lg:flex-row gap-12">
+                <div class="input-1 flex flex-col lg:flex-row gap-5 lg:gap-12">
                     <div class="name">
                         <p class="text-xl font-bold mb-4">Your Name</p>
                         <input type="text" placeholder="Enter your full name"
@@ -574,7 +597,7 @@
                     </div>
                 </div>
 
-                <div class="input-1 flex flex-col lg:flex-row gap-12 mt-4">
+                <div class="input-1 flex flex-col lg:flex-row gap-4 lg:gap-12 mt-4">
                     <div class="name">
                         <p class="text-xl font-bold mb-4">Subject</p>
                         <input type="text" placeholder="Enter your full name"
@@ -600,7 +623,7 @@
     </main>
     <!-- main section end -->
 
-    <div class="social-media rounded-2xl mt-12 mb-24 text-center p-10 bg-gray-100 lg:my-12 lg:mx-28 my-5 mx-5">
+    <div class="social-media rounded-2xl mt-12 mb-12 lg:mb-24 text-center p-10 bg-gray-100 lg:my-12 lg:mx-28 my-5 mx-5">
         <h1 class="text-2xl font-extrabold mb-6">Social Media</h1>
         <i class="fa-brands fa-twitter"></i>
         <i class="fa-brands fa-facebook ml-3"></i>
@@ -620,11 +643,11 @@
             </div>
             <div class="lg:ml-0 ml-12">
                 <div class="grp flex gap-2">
-                    <img src="Images/Frame (8).png" alt="">
-                    <p class="text-base font-medium gray">hockeys@support.com</p>
+                    <img src="Images/Frame (7).png" alt="">
+                    <p class="text-base font-medium gray mb-1">hockeys@support.com</p>
                 </div>
                 <div class="grp flex gap-2">
-                    <img src="Images/Frame (7).png" alt="">
+                    <img src="Images/Frame (8).png" alt="">
                     <p class="text-base font-medium gray">(+62) 123-321-543</p>
                 </div>
             </div>
@@ -632,15 +655,15 @@
 
         <div class="footer flex justify-evenly">
             <nav>
-                <a class="text-lg font-bold text-white">Company</a>
+                <a class="text-lg lg:ml-0 -ml-2 font-bold text-white">Company</a>
                 <a class="link link-hover">About us</a>
                 <a class="link link-hover">Leadership</a>
                 <a class="link link-hover">Careers</a>
                 <a class="link link-hover">News & Article</a>
                 <a class="link link-hover">Legal Notice</a>
             </nav>
-            <nav>
-                <a class="text-lg font-bold text-white">Support</a>
+            <nav class="text-center">
+                <a class="text-lg lg:ml-0 -ml-1 font-bold text-white">Support</a>
                 <a class="link link-hover">Help Center</a>
                 <a class="link link-hover">FAQ</a>
                 <a class="link link-hover">Careers</a>
@@ -648,14 +671,14 @@
             </nav>
         </div>
 
-        <nav class="flex-1">
-            <a class="text-lg font-bold text-white">Services</a>
+        <div class="text-center ">
+            <a class="lg:ml-0 -ml-2 text-lg font-bold text-white">Services</a>
             <a class="link link-hover">Academy</a>
             <a class="link link-hover">Group</a>
             <a class="link link-hover">Private</a>
             <a class="link link-hover">Hockeys</a>
             <a class="link link-hover">Hockeys</a>
-        </nav>
+        </div>
     </footer>
     <!-- footer section end -->
 
